fix: panel dynamic inter-input spacing

--- a/app/assets/stylesheets/base/_surveyjs.scss
+++ b/app/assets/stylesheets/base/_surveyjs.scss
@@ -78,7 +78,8 @@ $radio-checkbox-width-height: rem-calc(39);
     }
   }
 
-  .sv-panel {
+
+  :not(.sv-paneldynamic__panel-wrapper) > .sv-panel {
     .sv-row {
       &:first-child {
         padding-bottom: 0;
